fixing the spacing in the header, putting together the containers for the middle modules

--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,13 @@ body{
     text-align: center;
 }
 
+.headline{
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    max-width: 60rem;
+}
+
 h1{
     font-family: 'Grandstander', cursive;
 }
@@ -103,7 +110,6 @@ h1{
     font-weight: bolder;
     border-color: rgb(230,66,122);
     border-radius: 25px;
-    margin: 1em;
     padding: .5rem 1.25rem;
     text-decoration: none;
 }
@@ -122,17 +128,16 @@ h1{
 li{
     list-style: none;
     color: #fff;
-    margin: 2.5em;
+    margin: 1em;
 }
 
 .button{
     box-shadow: 0 8px 8px -4px #000;
-    margin: 1em;
     display: block;
 }
 .find-zip-container{
     background-color: #fff;
-    margin: 1em;
+    margin: 5em 1em 1em 1em;
     border-radius: 15px;
 }
 
@@ -165,4 +170,42 @@ li{
     border-color: rgb(230,66,122);
     border-radius: 5px;
     border: 22px;
+}
+
+.menu-cards{
+    margin: auto;
+    padding: 1em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.food-card{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.food-card img{
+    max-width: 75px;
+}
+
+.food-card p{
+    color: rgb(0,158,221,1);
+    font-weight: bold;
+    margin-top: auto;
+}
+
+.food-btn{
+    background-color: rgb(0,147,131);
+    border-radius: 100%;
+    width: 2.2rem;
+    height: 2.2rem;
+}
+
+.food-btn a{
+    color: #fff;
+    text-decoration: none;
+    text-transform: uppercase;
+
 }
